modules/grammars/ide/src/test/resources/cocos/valid/CircularDependencyConfigurationComponent.ide
package valid

typedef component configuration CircularDependencyConfigurationComponent {
    label "Some Configuration"

    frontend task main
}
