modules/grammars/ide/src/test/resources/cocos/invalid/CommonConfiguration.ide
package invalid

typedef configuration CommonConfiguration {
    label "Some nice Configuration Type"

    frontend task main
}
